# trr_workspace

./: .gitignore  .gitmodules  README.md  frames_2024-10-16_12.08.34.gv
low_level/forklift_controller/: forklift_controller.ino
low_level/motor_controller/: platformio.ini
low_level/motor_controller/include/: configuration.hpp
low_level/motor_controller/ros2_to_arduino/: ros2_to_arduino.ino
low_level/motor_controller/src/: main.cpp
src/forklift_control/: CMakeLists.txt  package.xml
src/forklift_control/scripts/: forklift_node.py
src/motor_control/: CMakeLists.txt  package.xml
src/motor_control/motor_control_arduino/: platformio.ini
src/motor_control/scripts/: cmd_vel_reader.py  movement.py
src/qr_recognition/: CMakeLists.txt  package.xml
src/trr_robot/: CMakeLists.txt  package.xml
src/trr_robot/config/: controllers.yaml  gazebo_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml  params.yaml  twist_mux.yaml
src/trr_robot/description/: depth_camera.xacro  gz.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  trr_robot.urdf.xacro  trr_robot.xacro
src/trr_robot/launch/: forklift.launch.py  gz.launch.py  launch_sim.py  mapping.launch.py  nav2.launch.py  physical_robot_launch.py  rsp.launch.py  rviz.launch.py  sensors.launch.py  trr_robot_gz_spawn.launch.py  urg.launch.py
src/trr_robot/rviz/: map.rviz  nav2.rviz  view_bot.rviz
src/trr_robot/scripts/: remapper.py
src/trr_robot_desc/: CMakeLists.txt  package.xml
src/trr_robot_sim/: CMakeLists.txt  package.xml
src/velocity_pub/: CMakeLists.txt  package.xml
(+53 files in other folders)
